--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <meta property="og:title" content="Support Human Profile Picture Generator" />
+    <meta property="og:title" content="Support Human - Profile Picture Generator" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://support-human.ga/" />
     <meta property="og:image" content="http://support-human.ga/images/fb.png" />
     <meta property="og:site_name" content="Support Human Profile Picture Generator" />
     <meta property="og:description" content="Change your profile picture to support Human and the people of those countries." />
-    <title>Support Human Profile Picture Generator</title>
+    <title>Support Human - Profile Picture Generator</title>
     <link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/themes/base/jquery-ui.css" rel="stylesheet" />
     <link href="vendor/jquery.ui.core.css" rel="stylesheet" />
     <link href="vendor/jquery.ui.resizable.css" rel="stylesheet" />
