--- a/index.html
+++ b/index.html
@@ -93,30 +93,7 @@
             </button>
             <hr>
             <label>Step 2: Choose country flag</label>
-            <label class="template-label active" style="background-image: url(images/sample.jpg);">
-              <img src="images/flag/1.png">
-              <input type="radio" name="template" value="1" autocomplete="off" checked="checked">
-            </label>
-            <label class="template-label" style="background-image: url(images/sample.jpg);">
-              <img src="images/flag/2.png">
-              <input type="radio" name="template" value="2" autocomplete="off">
-            </label>
-            <label class="template-label" style="background-image: url(images/sample.jpg);">
-              <img src="images/flag/3.png">
-              <input type="radio" name="template" value="3" autocomplete="off">
-            </label>
-            <label class="template-label" style="background-image: url(images/sample.jpg);">
-              <img src="images/flag/4.png">
-              <input type="radio" name="template" value="4" autocomplete="off">
-            </label>
-            <label class="template-label" style="background-image: url(images/sample.jpg);">
-              <img src="images/flag/5.png">
-              <input type="radio" name="template" value="5" autocomplete="off">
-            </label>
-            <label class="template-label" style="background-image: url(images/sample.jpg);">
-              <img src="images/flag/6.png">
-              <input type="radio" name="template" value="6" autocomplete="off">
-            </label>
+            <div id="templates"></div>
             <hr>
             <label>Step 3: Drag to reposition</label>
             <hr>
