--- a/index.html
+++ b/index.html
@@ -104,7 +104,10 @@
             </div>
           </form>
         </div>
-        <div id="copyright">(c) <a href="http://fb.com/kxgen" target="_blank">KANGXI</a></div>
+        <div id="copyright">
+          Source of picture: <a href="https://www.facebook.com/ollie.ade/posts/10208398865110427?pnref=story" target="_blank">Ollie Adébisi</a><br /><br />
+          (c) <a href="http://fb.com/kxgen" target="_blank">KANGXI</a>
+        </div>
       </div>
     </div>
 
