--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </script>
   </head>
 
-  <body id="drop">
+  <body>
     <div id="app_container">
       <div id="dashboard_container">
         <div id="dashboard">
